--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddActivity" />
+        <activity android:name=".CreateActivity" />
+        <activity android:name=".JoinActivity" />
         <activity
             android:name=".VoteActivity"
             android:label="@string/title_activity_vote"
