--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         <activity android:name=".AddActivity" />
         <activity android:name=".CreateActivity" />
         <activity android:name=".JoinActivity" />
-        <activity
-            android:name=".VoteActivity"
+        <activity android:name=".VoteActivity"
             android:label="@string/title_activity_vote"
             android:parentActivityName=".MainActivity">
         </activity>
