Completed Results page Merge branch 'master' of https://github.com/andrew-welsh626/HackOHIO2018
# Conflicts:
#	app/src/main/java/vote/hackohio/com/ezfunvoting/MainActivity.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".AddActivity" />
         <activity android:name=".CreateActivity" />
         <activity android:name=".JoinActivity" />
+        <activity android:name=".Results" />
         <activity
             android:name=".VoteActivity"
             android:label="@string/title_activity_vote"
