--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddActivity" />
+        <activity android:name=".AddActivity"
+            android:label= "AddActivity"
+            android:parentActivityName=".VoteActivity">
+        </activity>/>
         <activity android:name=".Results" />
         <activity android:name=".CreateActivity"
             android:label= "CreateActivity"
